apps/gitlab/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: gitlab
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: gitlab
  ports:
    - {name: web, port: 8080, targetPort: web}
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-web
  namespace: gitlab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: gitlab
  ports:
    - {name: web, port: 8080, targetPort: web}
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-registry
  namespace: gitlab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: gitlab
  ports:
    - {name: registry, port: 5000, targetPort: web}
